--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -10,22 +10,22 @@ block contenido
             div(class="max-w-md mx-auto my-10")
                 //itera el arreglo que llega con los errores//
                 each error in errores 
-                    p.bg-red-600.text-black.uppercase.text-xs.text-center.p-2.mb-1.font-bold= error.msg
+                    p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold= error.msg
                     
     .mt-8.mx-auto.max-w-md.bg-white.py-8.px-4.shadow
         form.space-y-5(method="POST" action="/auth/registro")
             div
                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Tu Nombre
-                input#nombre.w-full.px-4.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Nombre" type="text" name="nombre")
+                input#nombre.w-full.px-4.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Nombre" type="text" name="nombre" value= usuario ? usuario.nombre: '')
             div
                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de Registro
-                input#email.w-full.px-4.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Email" type="email" name="email")
+                input#email.w-full.px-4.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Email" type="email" name="email" value= usuario ? usuario.email: '')
             div
                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Contraseña
                 input#password.w-full.px-4.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Contraseña" type="password" name="password")
             div
                 label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="repetir_password") Repetir Contraseña
-                input#_repetir_password.w-full.px-4.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Confirmar Contraseña" type="password" name="_repetir_password")
+                input#repetir_password.w-full.px-4.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Confirmar Contraseña" type="password" name="repetir_password")
 
             div.d-flex.items-center.justify-between
                 a.text-gray-500.text-xs(href="/auth/login") ¿Ya tienes cuenta? Inicia Sesión
